--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,10 @@
             <version>2.0.1.Final</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
